--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,7 +19,7 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
 		<init-param>
 			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>com.github.fleax.shoppinglist.rest.Application</param-value>
+			<param-value>com.github.fleax.shoppinglist.Application</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
