--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>2.8</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
 			<version>2.8</version>
@@ -66,17 +72,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.glassfish.jersey.test-framework</groupId>
-			<artifactId>jersey-test-framework-core</artifactId>
-			<version>2.8</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.glassfish.jersey.test-framework.providers</groupId>
-			<artifactId>jersey-test-framework-provider-simple</artifactId>
-			<version>2.8</version>
-		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -126,6 +125,23 @@
 					</jvmFlags>
 					<disableUpdateCheck>true</disableUpdateCheck>
 				</configuration>
+
+				<executions>
+					<execution>
+						<id>server-start</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>devserver_start</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>server-stop</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>devserver_stop</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<plugin>
@@ -150,6 +166,40 @@
 									</fileset>
 								</copy>
 							</target>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.17</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.17</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+			
+			<!-- skip unit test run, tests to be executed during integration-test -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+				<executions>
+					<execution>
+						<id>surefire-it</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<skip>false</skip>
 						</configuration>
 					</execution>
 				</executions>
